--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="submitt">
         Thanks for the tips! 😃
-        <input id="submit" type="submit">
+        <input id="submit" type="submit" value="Submit">
     </div>
     </form>
 </body>
