--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <input id="name" name="name" type="text"  placeholder="Enter your name" required><br/><br/>
         </div>
         <div id="email-d">
-            <label id="email-label" for="emial">Name</label>
+            <label id="email-label" for="emial">Email</label>
             <input id="email" name="email" type="email" placeholder="Enter your email" required><br/><br/>
         </div>
         <div id="number-d">
-            <label id="number-label" for="number">Name</label>
+            <label id="number-label" for="number">Age</label>
             <input id="number" name="number" type="number" value="Age" placeholder="Age"  min="18" max="100"  required><br/><br/>
         </div>
         <div id="rad">
